# football-ml-project

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: app.py
configs/: base.yaml
data/processed/: README.md  teamstats.csv  teamstats_odds.csv  test.csv  test_odds.csv  train.csv
data/processed_backup/: test.csv  train_odds.csv
frontend/: index.html
models/: README.md
models/odds_teams/logreg/1.0.0/: metadata.json  model.pkl
models/odds_teams/logreg/1.1.0/: metadata.json
models/odds_teams/rf/1.0.0/: metadata.json
models/odds_teams/rf/1.1.0/: metadata.json
models/teamstats/logreg/1.0.0/: metadata.json  model.pkl
models/teamstats/logreg/1.1.0/: metadata.json
models/teamstats/rf/1.0.0/: metadata.json  model.pkl
models/teamstats/rf/1.1.0/: metadata.json
reports/baseline/: eval_log.md  metrics.json
scripts/: download_data.py
src/: baselines.py  build_odds.py  build_teamstats.py  compare_versions.py  config.py  data_processing.py  evaluate.py  features.py  odds_pipeline.py  pipeline.py  train_models.py
src/football_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api_endpoints.py  test_data_leakage.py  test_edge_cases.py  test_feature_engineering.py
